<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <!-- Program Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/programNameLayout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/programName"
                    android:textColorHint="@color/black"
                    app:cursorColor="@color/orange"
                    app:hintTextColor="@color/orange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/programName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Program Type (AutoCompleteTextView) -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/programType"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/blue"
                    app:endIconTint="@color/blue"
                    app:hintTextColor="@color/orange">

                    <AutoCompleteTextView
                        android:id="@+id/programTypeId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/programType"
                        android:inputType="none"
                        android:textColor="@color/blue"
                        android:background="@color/cream"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />


                </com.google.android.material.textfield.TextInputLayout>

                <!-- Start and End Date -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/startdatelayout"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/startDate"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/startdateinnertxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/blue"
                            android:textColorHint="#616161"
                            android:textColorLink="@color/orange" />

                        <TextView
                            android:id="@+id/startDateError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="12sp"
                            android:visibility="gone"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/enddatelayout"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/endDate"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enddateinnertxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/blue"
                            android:textColorLink="@color/orange" />

                        <TextView
                            android:id="@+id/endDateError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="12sp"
                            android:visibility="gone"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- Start and End Time -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/starttimelayout"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/startTime"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/starttimeinnertxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/blue"
                            android:textColorHint="@color/black" />

                        <TextView
                            android:id="@+id/startTimeError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="12sp"
                            android:visibility="gone"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/endtimelayout"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/endTime"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/endtimeinnertxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/blue" />

                        <TextView
                            android:id="@+id/endTimeError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="12sp"
                            android:visibility="gone"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <!-- Submit Button -->
                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/lightblue"
                    android:text="@string/submit"
                    android:textColor="@color/blue" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>